# AI-scaling-and-planning

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
examples/: api_client.py
src/predictive_scaling/: __init__.py  __main__.py  cli.py  config.py  evaluation.py
src/predictive_scaling/api/: __init__.py  app.py  schemas.py
src/predictive_scaling/data/: __init__.py  generator.py
src/predictive_scaling/features/: __init__.py  engineering.py
src/predictive_scaling/models/: __init__.py  baseline.py  forecaster.py
src/predictive_scaling/scaling/: __init__.py  engine.py
tests/: conftest.py  test_api.py  test_evaluation.py  test_features.py  test_forecaster.py  test_generator.py  test_scaling.py
